--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,13 +27,14 @@ services:
         internal:
 
   nginx:
-    image: nginx:1.17
-    volumes:
-      - ./conf/nginx/http.conf:/etc/nginx/nginx.conf
+    build: ./conf/nginx
     ports:
-      - 80:80
+        - 80:80
+        - 443:443
     depends_on:
-      - ctfd
+        - ctfd
+    networks:
+        default:
 
   db:
     image: mariadb:10.4.12
