--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -7,7 +7,7 @@ server {
 
 	ssl_certificate /etc/ssl/fullchain.pem;
 	ssl_certificate_key /etc/ssl/privkey.pem;
-    ssl_dhparam /etc/ssl/dhparam.pem;
+    ssl_dhparam /etc/nginx/dhparam.pem;
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_ciphers HIGH:!aNULL:!MD5;
 
