--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -4,9 +4,10 @@ upstream app_servers {
 
 server {
 	listen 443 ssl;
+    server_name ${HOST};
 
-	ssl_certificate /etc/ssl/fullchain.pem;
-	ssl_certificate_key /etc/ssl/privkey.pem;
+	ssl_certificate /etc/letsencrypt/live/${HOST}/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/${HOST}/privkey.pem;
     ssl_dhparam /etc/nginx/dhparam.pem;
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_ciphers HIGH:!aNULL:!MD5;
